# haskellnotes

./: my-project.cabal  stack.yaml
.stack-work/ghci/69a06be3/: cabal_macros.h
.stack-work/ghci/a8da7c0e/: cabal_macros.h
.stack-work/ghci/d19861ad/: cabal_macros.h
.stack-work/install/a6f9489f/flag-cache/: base16-bytestring-0.1.1.6-17atVnUhDnM13pAkKbwL6I  bson-0.3.2.7-FB4ZhkIcq4j3guBw80mvMX  hashtables-1.2.3.1-KC05d7lJDmcGphWFIr9nM1  nonce-1.0.7-I9mT0EmFOGk5Q4qtoeyaZw  pureMD5-2.1.3-6HBTMsGY5We7dYvQ7eDjVG  random-shuffle-0.0.4-D8rQyr0EjQQ3NUS8ao8Pzv
.stack-work/install/c1f464f3/flag-cache/: MonadRandom-0.5.1-7Fbm2qEG0ZHElePMIgRhmY  aeson-1.2.4.0-F0m0PMtKxT6ibf7dsUbTf  ansi-terminal-0.7.1.1-7jooQD7Q4Ah9JvyDmE1jcZ  asn1-encoding-0.9.5-DeeAH9WQoEqK3VERow50Fm  asn1-parse-0.9.4-9xhTELzlSR01IeQeSsIHWX  asn1-types-0.3.2-Jx8Pj4Z9lQnRTL04X8hcv  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-F8Rzvs1ilSM8Y15FBcVomO  base-compat-0.9.3-61QXrLshUW48h5q15T0fg0  base16-bytestring-0.1.1.6-Bd4rUARbKHBrsqzcqGjb8  basement-0.0.4-CQPUVuTHCHJ94cOhwxYf1X  blaze-builder-0.4.0.2-8u0JsnNi77k1DtjV0YEZQ0  bson-0.3.2.3-39KzLgJKOOgIVZGpCMRlGd  case-insensitive-1.2.0.10-8fWCn0YU2LFH0JYJwGUzuj  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  conduit-1.2.13-1QGhzWy66O23I6D8zFw7bC  conduit-extra-1.2.3.2-3Zxghlw8eg6FzE5HqrqtFh  cookie-0.4.3-9kqDbJ83mh7Ds9jlg5TA8A  crypto-api-0.13.3-4XC09YtAGDyBGs4rEdCmSN  cryptohash-0.11.9-6H5SNtEN7Y8DS6OGuDWrJc  cryptonite-0.24-JNQaswYKuErG1yHzC0UvCK  data-binary-ieee754-0.4.4-F3YRhJd3kvlDf64vOl9RIA  data-default-0.7.1.1-HxP9sk0JsrKFuLVc9OIluX  data-default-instances-containers-0.0.1-A7WE5ZxkyD2DXghs3tnK2n  entropy-0.3.8-5QiMzNT1cZR8rvzBKl4ZZ8  (+71 more)
lib/Concepts/: Concurrency.hs  Files.hs
lib/Concepts/Exceptions/: Basic.hs  Catch.hs  Control.hs  Except.hs  README.md  deneme.txt
lib/Concepts/Lenses/: Basic.hs  JohnWiegles.hs
lib/Concepts/Monads/: Basic.hs
lib/Concepts/Strings/: Strict.hs
lib/Concepts/Tagless/: App.hs  Domain.hs  IO.hs  Test.hs
lib/Concepts/Types/: GADTs.hs
lib/Libraries/Database/: Postgresimple.hs  Postgresimple2.hs
lib/Libraries/Json/: Basic.hs
lib/Libraries/Logging/: Katip.hs  README.md
lib/Libraries/Queues/: Rabbit.hs
lib/Libraries/Web/: Scotty.hs  Servant.hs
src/: Main.hs
